mesa (11.2.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * Drop upstreamed patches.
  * libgl1-mesa-glx.symbols: Remove dropped symbols.
  * rules,control: Drop -dbg packages, we have -dbgsym now.
  * rules, *.install.in, not-installed: Drop dri/-build prefix, we build
    everything in one pass nowadays.
  * control: Bump libdrm-dev build-dep to 2.4.67 for freedreno.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 23 Feb 2016 09:48:38 +0200

mesa (11.1.2-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 11 Feb 2016 13:14:08 +0200

mesa (11.1.1-2) unstable; urgency=medium

  * Limit the symbols glXGetDriverConfig and glXGetScreenDriver to
    arch=!hurd-any (Fixes FTBFS on hurd).

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 15 Jan 2016 18:44:52 +0100

mesa (11.1.1-1) experimental; urgency=medium

  * New upstream release.
  * Enable support for virgl (Closes: #807774).
  * Enable support for vc4 (Closes: #809406).
  * Enable support for freedreno on arm64.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 14 Jan 2016 11:27:28 +0100

mesa (11.1.0-1) experimental; urgency=medium

  * New upstream release.
  * Add a patch to remove the unused symbol
    _glapi_create_table_from_handle from libGL.so.1.
  * Replace shlibs file with a symbols file for libgl1-mesa-glx.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 15 Dec 2015 20:24:10 +0100

mesa (11.1.0~rc3-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump libdrm-dev build-dep to 2.4.65.
  * Update symbols for libgles2-mesa and libxatracker2.
  * Remove Breaks/Conflicts/Provides/Replaces from pre-wheezy.
  * Remove duplicated field "Priority" from package libgl1-mesa-dri.
  * Declare Multi-Arch: same for mesa-opencl-icd{,-dbg} (Closes:
    #804919).
  * Add a Lintian override for symbols-declares-dependency-on-other-
    package libgbm1-private.